Mon Dec  9 17:21:57 1996  Tom Tromey  <tromey@cygnus.com>

	* Makefile.am: Use guile-snarf.

Sun Dec  8 02:09:53 1996  Gary Houston  <ghouston@actrix.gen.nz>

	* Makefile.am (.c.x): define COMPILE with $(X_CFLAGS) added to the
	default.
	(MKDEP): add $(X_CFLAGS)

Fri Dec  6 22:27:32 1996  Tom Tromey  <tromey@cygnus.com>

	* configure.in: Use $DL_LIBS, not -ldl, in tcl7.5 check.

Fri Dec  6 20:41:05 1996  Mark Galassi  <rosalia@nis.lanl.gov>

	* configure.in: added -ldl in the tcl7.5 check, although you would
	think it would have been there because of the previous -ldl
	check, but it was not working.

Sat Nov 30 23:49:43 1996  Tom Tromey  <tromey@cygnus.com>

	* PLUGIN/Makefile.am: New file.
	* PLUGIN/greet, guile.inits, guile.libs: Removed.
	* Makefile.am, aclocal.m4: New files.
	* configure.in: Updated for Automake.

Wed Nov  6 16:40:11 1996  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* guile-tcl.c: Added #include <malloc.h>.

Sat Nov  2 19:47:22 1996  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

*	* guile-tk.c (scm_tk_do_one_event): Renamed and moved to
	guile-tcl.c.

*	* guile-tcl.c (scm_tcl_defined_p): New function: Check if an
	identifier exists in the namespace of an interpreter.
	(scm_tcl_do_one_event): Renamed and moved from guile-tk.c.

Thu Oct 24 22:34:09 1996  Mikael Djurfeldt  <mdj@mdj.nada.kth.se>

	* guile-tcl.c: #include "eval.h", #include "alist.h", #include
 	"smob.h"

Thu Oct 10 14:30:41 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	* guile-tcl.c (print_interp): Fix type of third argument to smob
	printer.  How did we miss this?  (Patch thanks to Marius Vollmer.)

	* guile-tk.h: Use SCM_P macro to declare prototypes.

Sun Sep 29 15:19:03 1996  Jim Blandy  <jimb@totoro.cyclic.com>

	Bug fix from Marius Vollmer <mvo@zagadka.ping.de>:
	* guile-tcl.c (scm_tcl_merge): Make sure args is a valid list.
	Free argv, if we allocated it at all.

Wed Sep 11 14:34:20 1996  Jim Blandy  <jimb@floss.cyclic.com>
